* Adding pubmed id to RELAX * Fixing modal color on Safari/Chrome * Fix context menu position

--- a/public/assets/css/datamonkey.css
+++ b/public/assets/css/datamonkey.css
@@ -526,3 +526,8 @@ span.glyphicon {
 #reference-branch-highlighter {
   color: red;
 }
+
+/* Safari/Chrome modal fix */
+.modal-dialog {
+  position: relative;
+}
